# notion-diary-mcp

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md
src/: config.rs  diary.rs  error.rs  main.rs  markdown.rs  notion.rs  server.rs  time_util.rs  transport.rs
src/diary/: heading.rs  month_page.rs  read.rs  save.rs
src/markdown/: from_blocks.rs  to_blocks.rs
src/notion/: client.rs  types.rs
src/transport/: http.rs  stdio.rs
