[package]
name = "notion-diary-mcp"
version = "0.1.0"
edition = "2024"
description = "Notion 日記専用 MCP サーバ。stdio と Streamable HTTP の両トランスポートに対応。"
license = "MIT"
repository = "https://github.com/blono/notion-diary-mcp"
readme = "README.md"

[[bin]]
name = "notion-diary-mcp"
path = "src/main.rs"

[dependencies]
anyhow = "1"
axum = "0.8"
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde", "std"] }
chrono-tz = "0.10"
clap = { version = "4", features = ["derive"] }
dotenvy = "0.15"
pulldown-cmark = { version = "0.13", default-features = false, features = ["html"] }
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls", "gzip"] }
rmcp = { version = "1.7", features = [
    "server",
    "macros",
    "transport-io",
    "transport-streamable-http-server",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
sha2 = "0.11"
subtle = "2"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std", "sync", "time", "signal"] }
tower = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[dev-dependencies]
pretty_assertions = "1"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"
